# Million

./: README.md  index.html
.github/workflows/: Diagnostics.rs  Read me.md  Safety.rs  optimisation.rs  system_check.rs
.github/workflows/Backend/: Data_threats.rs  blockchain_security.rs  cloud_ data.rs  cloud_security.rs  compressor.rs  data_analytics.rs
.github/workflows/Backend/Big data/: Data_store.rs  Main.rs
.github/workflows/Backend/Drivers/: Camera.rs  Cargo.toml  Mod.rs  Sensors.rs  Touchscreen.rs
.github/workflows/Backend/Libs/Neuro_ai/: Emotion_infer.rs  Llm_core.rs  Neurones.rs
.github/workflows/Backend/Libs/Neuro_fs/: Semantic_fs.rs
.github/workflows/Backend/Libs/Neuronet/: Protocols.rs
.github/workflows/Backend/Libs/neuro_utils/: Memory.rs  Scheduler.rs  Tokenizer.rs
.github/workflows/Backend/Tools/: Cargo.toml  Debugger.rs  neuroscript_compiler
.github/workflows/Mech/: Autonomous_boat.rs  Autonomous_vehicle.rs  Robot.rs  drone.rs
.github/workflows/Microcontroller/: Brain_teaser.rs  Chatbot.rs  Recruitment.rs
.github/workflows/frontend/src/: data_ encryption.rs
.github/workflows/frontend/src/API/: cortex.js  index.js  memories.js
.github/workflows/frontend/src/Data/: Cargo.toml  Emotions.js  graphSamples.js  intentTimeline.js  memories.js
.github/workflows/frontend/src/Styles/: Global.css  Layout.css  Variables.css
.github/workflows/frontend/src/Styles/Components/: Cortex bubble.css  Intent timeline.css
.github/workflows/frontend/src/Styles/Components/Iot/: Car.rs  Civil.rs  Doctor.rs  Educator.rs  Farmer.rs  Main.rs
.github/workflows/frontend/src/Styles/Themes/: Dark.css  Light.css
.github/workflows/frontend/src/components/: CortexBubble.jsx  IntentTimeline.jsx  MemoryLane.jsx  System.rs  home.rs
.github/workflows/neurokernel/: Cargo.toml
.github/workflows/neurokernel/src/: Config.rs  Efficiency.rs  Llm_runtime.rs  Net.rs  Notifier.rs  Pkg.rs  Scheduler.rs  Setup.rs  auth.rs  brainteaser.js  cortex_ui.rs  dev_tools.rs  emotion_infer.rs  fe.rs  fs.rs  llm_runtime.rs  memory.rs  memory_lane.rs  ml_monitor.rs  music.rs  neuronet.rs  neuroscript.rs  news_feature.rs  notepad.rs  process.rs  recruitment_layer.rs  shell.rs  sim_user.rs  theme_customizer.rs  tokenizer.rs  vault_storage.rs
.github/workflows/neurokernel/src/Deep/: Deep_learning.rs  Main.rs  chatbot.rs
.github/workflows/neurokernel/src/Holograph/: Cargo.toml  Types.rs  gesture_input.rs  hologram_engine.rs  main.rs
