[package]
name = "neuroos-tools"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Developer and system tools for NeuroOS"
license = "MIT"
repository = "https://github.com/yourusername/neuroos"

[dependencies]
# File and path management
walkdir = "2.4"
glob = "0.3"

# Packaging and compression
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# JSON, TOML, and YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust = "0.4"

# Deployment over SSH / remote systems
ssh2 = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# CLI interfaces for developers
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"

# For running build tasks and managing subprocesses
duct = "0.13"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["dev"]
dev = []
