[package]
name = "neuroos-frontend-data"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "State and data management for NeuroOS frontend"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you're using reactive frontend frameworks
yew = "0.21"           # For reactive frontend (optional)
leptos = { version = "0.6", optional = true }

# State management
wasm-bindgen = "0.2"
gloo = { version = "0.10", features = ["storage", "timers"] }

# Data utilities
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["yew"]
leptos_support = ["leptos"]

[dev-dependencies]
serde_test = "1.0"
